...
        tools:layout="@layout/entrant_profile">
    </fragment>

    <fragment
        android:id="@+id/EntrantClassFragment"
        android:name="com.example.cmput301project.view.EntrantClassFragment"
        android:label="My Classes"
        tools:layout="@layout/event_list" >
        <action
            android:id="@+id/action_EntrantClass_to_EntrantEventView"
            app:destination="@+id/EntrantEventViewFragment" />
    </fragment>

    <fragment
...
