...
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/geolocation_container" />

        <Button
            android:id="@+id/leave_class_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_leave_outline"
            android:paddingVertical="14dp"
            android:layout_marginTop="32dp"
            android:text="Leave Class"
            android:textColor="#65558F"
            android:textSize="14sp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/join_class_button"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_description" />

        <Button
            android:id="@+id/join_class_button"
...
